# app/Http/Controllers/Api/ProductController.php
@@ -9,8 +9,12 @@ use App\Http\Resources\ProductRescource;
 
 class ProductController extends Controller
 {
-    public function index() {
-        $products =  Product::where('status',Product::STATUS_AVAILABLE)
+    /**
+     * @queryParam category_id integer filter products by category_id field. Example: 1 .
+     */
+    public function index(Request $request) {
+        $products =  Product::when($request->query('category_id'),fn($q) => $q->where('category_id',$request->category_id))
+        ->where('status',Product::STATUS_AVAILABLE)
         ->orderBy('id','DESC')
         ->paginate(10);
 
@@ -22,7 +26,7 @@ class ProductController extends Controller
     }
 
     /**
-     * @queryParam name required string to search for in product name .
+     * @queryParam name string to search for in product name . No-example
      */
     public function search(Request $request) {
         $products = Product::where('name','LIKE',"%" . $request->query('name') . "%")->paginate(10);
